# lispouille

./: meson.build
src/: lexer.c  lexer.h  main.c  meson.build  token.c  token.h
test/: meson.build  test_lexer.c  test_token.c
